@@ -75,6 +75,9 @@ Buttons[]=bold
 Buttons[]=italic
 Buttons[]=underline
 Buttons[]=|
+#Buttons[]=sub
+#Buttons[]=sup
+#Buttons[]=|
 Buttons[]=bullist
 Buttons[]=numlist
 Buttons[]=indent
